tests/compiler/invalidTemplate/index.ts
`hello ${10;test`
//~^ ERROR: Expected '}'.
//~| ERROR: Cannot find name 'test'.